add sitemap for google crawling

--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/TS_LOGO_LIGHT.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Official Tabernacle School Website" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="google-site-verification"
+      content="JgTqLm9g3n_1RzzlCw9XTMJmjGz9zSLGKZMG-RJUzqg"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/TS_LOGO_LIGHT.svg" />
     <!--
