--- a/client/index.html
+++ b/client/index.html
@@ -24,5 +24,6 @@
     <div id="root"></div>
     <!-- vite entry point 👇 -->
     <script type="module" src="/src/index.jsx"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
   </body>
 </html>
