--- a/client/index.html
+++ b/client/index.html
@@ -12,18 +12,13 @@
     />
     <link rel="apple-touch-icon" href="favicon.ico" />
     <title>Tabernacle School</title>
-    <!-- <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    /> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!-- vite entry point 👇 -->
     <script type="module" src="/src/index.jsx"></script>
+    <!-- Required script for "swiper" package 👇 -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
   </body>
 </html>
